--- a/ServiceX/ServiceX.Web/ServiceX.Web.csproj
+++ b/ServiceX/ServiceX.Web/ServiceX.Web.csproj
@@ -3,6 +3,6 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
-    <AddRazorSupportForMvc>true</AddRazorSupportForMvc>
+    <!--<AddRazorSupportForMvc>true</AddRazorSupportForMvc>-->
   </PropertyGroup>
 </Project>
